cmake_minimum_required(VERSION 3.5.1)
project(meteor VERSION 0.0.0.2)

# enable folder scope in ide
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
add_subdirectory(scripts)
if(MSVC)
  include(msvc_helper)
  enable_compile_flag_mt()
  enable_unicode_charactor()
  disable_minmax_macro()
  set_msvc_warning_level(4)
endif(MSVC)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib CACHE PATH "lib dir")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib CACHE PATH "lib dir")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin CACHE PATH "exe dir")
set(CMAKE_DEBUG_POSTFIX "d")

option(M_ENABLE_EXPERIMENAL_FUNC "Private" OFF)

include_directories(${PROJECT_SOURCE_DIR})
include(imgui)
include(zlib)
include(png)
if(M_ENABLE_EXPERIMENAL_FUNC)
  include(protobuf)
  include(grpc)
  include(tensorflow)
endif()
add_subdirectory(ll_graphic)
add_subdirectory(decoder)
add_subdirectory(meteor)
